fix mdc files and eslint conf

--- a/docs/content/1.getting-started/2.installation.md
+++ b/docs/content/1.getting-started/2.installation.md
@@ -5,7 +5,7 @@ navigation:
   icon: i-lucide-download
 ---
 
-::tip{target="\_blank" to="https://content.nuxt.com/templates/docs"}
+::tip{target="_blank" to="https://content.nuxt.com/templates/docs"}
 Use this template on Nuxt Studio and start your documentation in seconds.
 ::
 
