--- a/docs/content/2.essentials/3.prose-components.md
+++ b/docs/content/2.essentials/3.prose-components.md
@@ -9,23 +9,19 @@ navigation:
 
 Use `accordion` and `accordion-item` to create collapsible content sections. Accordions are useful for organizing FAQs, expandable details, or grouped information in an interactive way.
 
-## ::code-preview
-
-## class: "[&>div]:\*:my-0"
-
-:::accordion
-::::accordion-item
-
+::code-preview
 ---
-
-icon: i-lucide-circle-help
-label: What are the main considerations when upgrading to Nuxt UI v3?
-
+class: "[&>div]:*:my-0"
 ---
-
-The transition to v3 involves significant changes, including new component structures, updated theming approaches, and revised TypeScript definitions. We recommend a careful, incremental upgrade process, starting with thorough testing in a development environment.
-::::
-
+  :::accordion
+    ::::accordion-item
+    ---
+    icon: i-lucide-circle-help
+    label: What are the main considerations when upgrading to Nuxt UI v3?
+    ---
+    The transition to v3 involves significant changes, including new component structures, updated theming approaches, and revised TypeScript definitions. We recommend a careful, incremental upgrade process, starting with thorough testing in a development environment.
+    ::::
+  
     ::::accordion-item
     ---
     icon: i-lucide-circle-help
@@ -33,15 +29,13 @@ The transition to v3 involves significant changes, including new component struc
     ---
     Nuxt UI is now compatible with Vue! You can follow the [installation guide](/getting-started/installation) to get started.
     ::::
-
+  
     ::::accordion-item{icon="i-lucide-circle-help" label="What about Nuxt UI Pro?"}
     We've also rebuilt Nuxt UI Pro from scratch and released a `v3.0.0-alpha.x` package but it only contains the components to build this documentation yet. This will be a free update, so the license you buy now will be valid for v3. We're actively working to finish the rewrite of all Nuxt UI Pro components.
     ::::
-
-:::
+  :::
 
 #code
-
 ```mdc
 ::accordion
 
@@ -59,29 +53,26 @@ We've also rebuilt Nuxt UI Pro from scratch and released a `v3.0.0-alpha.x` pack
 
 ::
 ```
-
 ::
 
 ### Badge
 
 Use badge to display status indicators or labels. Badges are great for highlighting version numbers, statuses, or categories within your content.
 
-## ::code-preview
-
-## label: Preview
-
-:::badge
-**v3.0.0-alpha.10**
-:::
+::code-preview
+---
+label: Preview
+---
+  :::badge
+  **v3.0.0-alpha.10**
+  :::
 
 #code
-
 ```mdc
 ::badge
 **v3.0.0-alpha.10**
 ::
 ```
-
 ::
 
 ### Callout
@@ -90,46 +81,42 @@ Use callout to emphasize important contextual information. Callouts draw attenti
 
 Customize with `icon` and `color` props or use `note`, `tip`, `warning`, `caution` shortcuts for pre-defined semantic styles.
 
-## ::code-preview
-
-## class: "[&>div]:_:my-0 [&>div]:_:w-full"
-
-:::callout
-This is a `callout` with full **markdown** support.
-:::
+::code-preview
+---
+class: "[&>div]:*:my-0 [&>div]:*:w-full"
+---
+  :::callout
+  This is a `callout` with full **markdown** support.
+  :::
 
 #code
-
 ```mdc
 ::callout
 This is a `callout` with full **markdown** support.
 ::
 ```
-
 ::
 
 ::code-preview
-:::div{.flex.flex-col.gap-4.w-full}
-::::note{.w-full.my-0}
-Here's some additional information for you.
-::::
-
+  :::div{.flex.flex-col.gap-4.w-full}
+    ::::note{.w-full.my-0}
+    Here's some additional information for you.
+    ::::
+  
     ::::tip{.w-full.my-0}
     Here's a helpful suggestion.
     ::::
-
+  
     ::::warning{.w-full.my-0}
     Be careful with this action as it might have unexpected results.
     ::::
-
+  
     ::::caution{.w-full.my-0}
     This action cannot be undone.
     ::::
-
-:::
+  :::
 
 #code
-
 ```mdc
 ::note
 Here's some additional information.
@@ -147,7 +134,6 @@ Be careful with this action as it might have unexpected results.
 This action cannot be undone.
 ::
 ```
-
 ::
 
 ### Card
@@ -156,26 +142,21 @@ Use `card` to highlight content blocks. Cards are useful for showcasing features
 
 Customize with `title`, `icon`, and `color` props. Cards can also act as links using `<NuxtLink>` properties for navigation.
 
-## ::code-preview
-
-## class: "[&>div]:_:my-0 [&>div]:_:w-full"
-
-:::card
-
+::code-preview
 ---
-
-icon: i-simple-icons-github
-target: \_blank
-title: Dashboard
-to: https://github.com/nuxt-ui-pro/dashboard
-
+class: "[&>div]:*:my-0 [&>div]:*:w-full"
 ---
-
-A dashboard with multi-column layout.
-:::
+  :::card
+  ---
+  icon: i-simple-icons-github
+  target: _blank
+  title: Dashboard
+  to: https://github.com/nuxt-ui-pro/dashboard
+  ---
+  A dashboard with multi-column layout.
+  :::
 
 #code
-
 ```mdc
 ::card
 ---
@@ -187,7 +168,6 @@ target: _blank
 A dashboard with multi-column layout.
 ::
 ```
-
 ::
 
 ### CardGroup
@@ -195,21 +175,17 @@ A dashboard with multi-column layout.
 Use `card-group` to arrange cards in a grid layout. `card-group` is ideal for displaying collections of cards in a structured, visually appealing, and responsive grid.
 
 ::code-preview
-:::card-group{.w-full}
-::::card
-
----
-
-icon: i-simple-icons-github
-target: \_blank
-title: Dashboard
-to: https://github.com/nuxt-ui-pro/dashboard
-
----
-
-A dashboard with multi-column layout.
-::::
-
+  :::card-group{.w-full}
+    ::::card
+    ---
+    icon: i-simple-icons-github
+    target: _blank
+    title: Dashboard
+    to: https://github.com/nuxt-ui-pro/dashboard
+    ---
+    A dashboard with multi-column layout.
+    ::::
+  
     ::::card
     ---
     icon: i-simple-icons-github
@@ -219,7 +195,7 @@ A dashboard with multi-column layout.
     ---
     A template with landing, pricing, docs and blog.
     ::::
-
+  
     ::::card
     ---
     icon: i-simple-icons-github
@@ -229,7 +205,7 @@ A dashboard with multi-column layout.
     ---
     A documentation with `@nuxt/content`.
     ::::
-
+  
     ::::card
     ---
     icon: i-simple-icons-github
@@ -239,11 +215,9 @@ A dashboard with multi-column layout.
     ---
     A landing page you can use as starting point.
     ::::
-
-:::
+  :::
 
 #code
-
 ```mdc
 ::card-group
 
@@ -289,27 +263,25 @@ A landing page you can use as starting point.
 
 ::
 ```
-
 ::
 
 ### Collapsible
 
 Use `collapsible` to hide and reveal content sections. `collapsible` is ideal for showing optional details, technical specifications, or less frequently needed information.
 
-## ::code-preview
-
-## class: "[&>div]:\*:w-full"
-
-:::collapsible
-| Prop | Default | Type |
-| ------- | --------- | -------- |
-| `name` | | `string` |
-| `size` | `md` | `string` |
-| `color` | `neutral` | `string` |
-:::
+::code-preview
+---
+class: "[&>div]:*:w-full"
+---
+  :::collapsible
+  | Prop    | Default   | Type     |
+  | ------- | --------- | -------- |
+  | `name`  |           | `string` |
+  | `size`  | `md`      | `string` |
+  | `color` | `neutral` | `string` |
+  :::
 
 #code
-
 ```mdc
 ::collapsible
 
@@ -321,7 +293,6 @@ Use `collapsible` to hide and reveal content sections. `collapsible` is ideal fo
 
 ::
 ```
-
 ::
 
 ### Field
@@ -329,18 +300,16 @@ Use `collapsible` to hide and reveal content sections. `collapsible` is ideal fo
 Use `field` to describe a specific field, property, or parameter. `field` components are perfect for documenting API parameters, component props, or configuration options.
 
 ::code-preview
-:::field{.w-full required name="name" type="string"}
-The `description` can be set as prop or in the default slot with full **markdown** support.
-:::
+  :::field{.w-full required name="name" type="string"}
+  The `description` can be set as prop or in the default slot with full **markdown** support.
+  :::
 
 #code
-
 ```mdc
 ::field{name="name" type="string" required}
 The `description` can be set as prop or in the default slot with full **markdown** support.
 ::
 ```
-
 ::
 
 ### FieldGroup
@@ -348,27 +317,25 @@ The `description` can be set as prop or in the default slot with full **markdown
 Use `field-group` to group related fields together in a list. `field-group` helps organize and structure documentation for multiple related fields or properties.
 
 ::code-preview
-:::field-group
-::::field{name="analytics" type="boolean"}
-Default to `false` - Enables analytics for your project (coming soon).
-::::
-
+  :::field-group
+    ::::field{name="analytics" type="boolean"}
+    Default to `false` - Enables analytics for your project (coming soon).
+    ::::
+  
     ::::field{name="blob" type="boolean"}
     Default to `false` - Enables blob storage to store static assets, such as images, videos and more.
     ::::
-
+  
     ::::field{name="cache" type="boolean"}
     Default to `false` - Enables cache storage to cache your server route responses or functions using Nitro's `cachedEventHandler` and `cachedFunction`
     ::::
-
+  
     ::::field{name="database" type="boolean"}
     Default to `false` - Enables SQL database to store your application's data.
     ::::
-
-:::
+  :::
 
 #code
-
 ```mdc
 ::field-group
   ::field{name="analytics" type="boolean"}
@@ -388,7 +355,6 @@ Default to `false` - Enables analytics for your project (coming soon).
   ::
 ::
 ```
-
 ::
 
 ### Icon
@@ -398,59 +364,55 @@ Use `icon` to insert icons from icon libraries. Icons provide visual cues and en
 ::code-preview
 :icon{name="i-simple-icons-nuxtdotjs"}
 
-#code
+ 
 
+#code
 ```mdc
 :icon{name="i-simple-icons-nuxtdotjs"}
 ```
-
 ::
 
 ### Kbd
 
 Use `kbd` to display keyboard keys or shortcuts. `kbd` components clearly indicate keyboard inputs for instructions or command references.
 
-## ::code-preview
-
-## class: "[&>div]:\*:my-0"
-
-` `
+::code-preview
+---
+class: "[&>div]:*:my-0"
+---
+`` ``
 
 #code
-
 ```mdc
 :kbd{value="meta"} :kbd{value="K"}
 ```
-
 ::
 
 ### Tabs
 
 Use `tabs` and `tabs-item` to organize content into tabbed interfaces. Tabs are effective for separating content into logical sections, improving content discoverability and organization.
 
-## ::code-preview
-
-## class: "[&>div]:\*:my-0"
-
-:::tabs{.w-full}
-::::tabs-item{icon="i-lucide-code" label="Code"}
-`mdc
+::code-preview
+---
+class: "[&>div]:*:my-0"
+---
+  :::tabs{.w-full}
+    ::::tabs-item{icon="i-lucide-code" label="Code"}
+    ```mdc
     ::callout
     Lorem velit voluptate ex reprehenderit ullamco et culpa.
     ::
-    `
-::::
-
+    ```
+    ::::
+  
     ::::tabs-item{icon="i-lucide-eye" label="Preview"}
       :::::callout
       Lorem velit voluptate ex reprehenderit ullamco et culpa.
       :::::
     ::::
-
-:::
+  :::
 
 #code
-
 ````mdc
 ::tabs
 
@@ -474,7 +436,6 @@ Lorem velit voluptate ex reprehenderit ullamco et culpa.
 
 ::
 ````
-
 ::
 
 ### Steps
@@ -483,31 +444,28 @@ Use `steps` to create step-by-step guides from document headings. `steps` compon
 
 Set the `level` prop to define the heading level to include in the step-by-step guide.
 
-## ::code-preview
-
-## class: "[&>div]:\*:w-full"
-
-:::steps{level="4"}
-
-#### Add the Nuxt UI Pro module in your `nuxt.config.ts`
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  modules: ['@nuxt/ui-pro']
-})
-```
-
-#### Import Tailwind CSS and Nuxt UI Pro in your CSS
-
-```css [assets/css/main.css]
-@import 'tailwindcss';
-@import '@nuxt/ui-pro';
-```
-
-:::
+::code-preview
+---
+class: "[&>div]:*:w-full"
+---
+  :::steps{level="4"}
+  #### Add the Nuxt UI Pro module in your `nuxt.config.ts`
+  
+  ```ts [nuxt.config.ts]
+  export default defineNuxtConfig({
+    modules: ['@nuxt/ui-pro']
+  })
+  ```
+  
+  #### Import Tailwind CSS and Nuxt UI Pro in your CSS
+  
+  ```css [assets/css/main.css]
+  @import "tailwindcss";
+  @import "@nuxt/ui-pro";
+  ```
+  :::
 
 #code
-
 ````mdc
 ::steps{level="4"}
 
@@ -528,5 +486,4 @@ export default defineNuxtConfig({
 
 ::
 ````
-
 ::
