--- a/docs/content/1.getting-started/3.usage.md
+++ b/docs/content/1.getting-started/3.usage.md
@@ -7,13 +7,11 @@ navigation:
 
 This is only a basic example of what you can achieve with [Nuxt UI Pro](https://ui.nuxt.com/pro/guide), you can tweak it to match your needs. The template uses several Nuxt modules underneath like [`@nuxt/content`](https://content.nuxt.com) for the content and [`nuxt-og-image`](https://nuxtseo.com/og-image/getting-started/installation) for social previews.
 
-## ::tip
-
-target: \_blank
-to: https://ui.nuxt.com/getting-started/installation/pro/nuxt
-
+::tip
 ---
-
+target: _blank
+to: https://ui.nuxt.com/getting-started/installation/pro/nuxt
+---
 Learn more on how to take the most out of Nuxt UI Pro!
 ::
 
@@ -124,6 +122,6 @@ export default defineAppConfig({
 })
 ```
 
-::tip{target="\_blank" to="https://content.nuxt.com/docs/studio/config"}
+::tip{target="_blank" to="https://content.nuxt.com/docs/studio/config"}
 This template integrates with Nuxt Studio, providing a visual interface for editing your documentation - perfect for non-technical contributors.
 ::
