--- a/docs/content/2.essentials/4.images-embeds.md
+++ b/docs/content/2.essentials/4.images-embeds.md
@@ -15,11 +15,9 @@ Display images using standard Markdown syntax. Markdown images are simple to imp
 ![Nuxt Social Image](https://nuxt.com/new-social.jpg)
 
 #code
-
 ```mdc
 ![Nuxt Social Image](https://nuxt.com/new-social.jpg)
 ```
-
 ::
 
 ::note
@@ -33,28 +31,27 @@ Use embeds for more image customization. Embeds offer greater control over image
 ::code-preview
 ![Nuxt Social Image](https://nuxt.com/new-social.jpg){height="150"}
 
-#code
 
+
+#code
 ```mdc
 :img{src="https://nuxt.com/new-social.jpg" alt="Nuxt Social Image" height="150"}
 ```
-
 ::
 
 ## Embeds and HTML elements
 
 Embeds allow adding various HTML elements like videos and iframes. This feature extends documentation capabilities to include interactive and multimedia content.
 
-## ::code-preview
-
-## class: "[&>div]:\*:w-full"
-
+::code-preview
+---
+class: "[&>div]:*:w-full"
+---
 :iframe{src="https://www.youtube-nocookie.com/embed/_eQxomah-nA?si=pDSzchUBDKb2NQu7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="aspect-ratio: 16/9;"}
 
-#code
 
+#code
 ```mdc
 :iframe{src="https://www.youtube-nocookie.com/embed/_eQxomah-nA?si=pDSzchUBDKb2NQu7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="aspect-ratio: 16/9;"}
 ```
-
 ::
