chore(docs): WIP write getting-started section doc

--- a/docs/content/1.getting-started/2.installation.md
+++ b/docs/content/1.getting-started/2.installation.md
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: Get started with Nuxt UI Pro documentation template.
+description: Start your Nuxt app to interface your workflows
 navigation:
   icon: i-lucide-download
 ---
@@ -11,19 +11,69 @@ Use this template on Nuxt Studio and start your documentation in seconds.
 
 ## Quick Start
 
-You can start a fresh new project with:
+
+### Create a Nuxt project
+In order to start a fresh new project, you first need to create a nuxt project 
 
 ```bash [Terminal]
-npx nuxi init -t github:nuxt-ui-pro/docs
+pnpm create nuxt <project-name>
+# select the installation of nuxt/ui during creation process
+cd project-name
 ```
 
-or create a new repository from GitHub:
+### install dependencies
 
-1. Open <https://github.com/nuxt-ui-pro/docs>
-2. Click on `Use this template` button
-3. Enter repository name and click on `Create repository from template` button
-4. Clone your new repository
-5. Install dependencies with your favorite package manager
-6. Start development server
 
-That's it! You can now start writing your documentation in the [`content/`](https://content.nuxt.com/usage/content-directory) directory 🚀
+```bash [pnpm]
+pnpm add @nuxtjs/supabase
+```
+
+### Add GaaS to the Nuxt project
+
+```bash [Terminal]
+pnpm add @gaas/ui
+```
+
+Setup Nuxt project
+
+::tabs
+
+:::tabs-item{label="Gaas"}
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  extends: ['@gaas/ui'],
+})
+```
+:::
+:::tabs-item{label="GaaS with wiki"}
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  extends: ['@gaas/wiki'],
+})
+```
+:::
+::
+
+
+### Setup Tailwind CSS
+
+Create a `main.css` file in the `app/assets/css` directory and add the following content:
+
+```css [app/assets/css/main.css]
+@import 'tailwindcss' theme(static);
+@import '@nuxt/ui';
+
+@source "../../../node_modules/@gaas/ui";
+```
+
+
+### Setup Supabase
+
+In order to use GaaS, you need to connect to a Supabase project. Either you can host your own Supabase project or [create one on their cloud](https://supabase.com) .
+
+
+### Finish setup nuxt project
+
+- Remove app.js (provided by @gaas/ui or @gaas/wiki)
