--- a/docs/content/1.getting-started/1.index.md
+++ b/docs/content/1.getting-started/1.index.md
@@ -1,73 +1,57 @@
 ---
-title: Introduction
-description: Welcome to Nuxt UI Pro documentation template.
+title: GaaS
+description: GaaS's goal is to make the development of a workflow web interface easy.
 navigation:
   icon: i-lucide-house
 ---
 
-This template is a ready-to-use documentation template made with [Nuxt UI Pro](https://ui.nuxt.com/pro), a collection of premium components built on top of [Nuxt UI](https://ui.nuxt.com) to create beautiful & responsive Nuxt applications in minutes.
+GaaS (Galaxy as a Service) is a set of components to build your workflow interface. 
+Under the hood, it uses Galaxy to provide a powerful and flexible API to manage your data and workflows.
+It leverage the Nuxt ecosystem to ensure a great developer experience and performance.
 
-There are already many websites based on this template:
+
+GaaS is composed of several packages, each with its own purpose:
 
 ::card-group
   :::card
   ---
-  icon: i-simple-icons-nuxtdotjs
   target: _blank
-  title: Nuxt
+  title: Blendtype
   to: https://nuxt.com
   ---
-  The Nuxt website
+  Typescript client to interact with the Galaxy REST API.
   :::
 
   :::card
   ---
   icon: i-simple-icons-nuxtdotjs
   target: _blank
-  title: Nuxt UI
+  title: nuxt-galaxy
   to: https://ui.nuxt.com
   ---
-  The documentation of `@nuxt/ui` and `@nuxt/ui-pro`
+  Nuxt module that integrates with Galaxy Project. 
+  It provides authentication handling and data persistence 
+  with Supabase, workflow execution interface.
   :::
 
   :::card
   ---
   icon: i-simple-icons-nuxtdotjs
   target: _blank
-  title: Nuxt Image
+  title: GaaS UI
   to: https://image.nuxt.com
   ---
-  The documentation of `@nuxt/image`
+  Nuxt layer built on top of nuxt-galaxy that provides pre-built pages and layouts.
   :::
 
   :::card
   ---
   icon: i-simple-icons-nuxtdotjs
   target: _blank
-  title: Nuxt Content
+  title: GaaS Wiki
   to: https://content.nuxt.com
   ---
-  The documentation of `@nuxt/content`
-  :::
-
-  :::card
-  ---
-  icon: i-simple-icons-nuxtdotjs
-  target: _blank
-  title: Nuxt Devtools
-  to: https://devtools.nuxt.com
-  ---
-  The documentation of `@nuxt/devtools`
-  :::
-
-  :::card
-  ---
-  icon: i-simple-icons-nuxtdotjs
-  target: _blank
-  title: Nuxt Hub
-  to: https://hub.nuxt.com
-  ---
-  The best place to manage your projects, environments and variables.
+  Nuxt layer providing comprehensive documentation and wiki capabilities
   :::
 ::
 
