fix issue with new way to use nuxt/ui class names (text and bg)

--- a/docs/content/1.getting-started/2.installation.md
+++ b/docs/content/1.getting-started/2.installation.md
@@ -21,6 +21,31 @@ pnpm create nuxt <project-name>
 cd project-name
 ```
 
+If you are using Nuxt 3, you need to modify you Nuxt app to make it compatible.
+
+Add this to: 
+
+``` ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  future: {
+    compatibilityVersion: 4,
+  },
+})
+```
+
+and then run this command :
+
+``` bash [pnpm]
+pnpm dlx codemod@latest nuxt/4/migration-recipe
+```
+
+You need to remove the `app.vue` in order to use the one defined in the `ui` or `wiki layer`.
+
+
+```bash [Terminal]
+rm app/app.vue
+```
+
 ### install dependencies
 
 
