Fix: css not load correctly

--- a/docs/content/1.get-started/2.installation.md
+++ b/docs/content/1.get-started/2.installation.md
@@ -19,7 +19,14 @@ In order to start a fresh new project, you first need to create a nuxt project
 
 ```bash [Terminal]
 pnpm create nuxt <project-name>
-# select the installation of nuxt/ui during creation process
+```
+
+
+::note 
+During the creation process, select the installation of nuxt/ui module.
+::
+
+```bash [Terminal]
 cd project-name
 ```
 
@@ -41,7 +48,7 @@ and then run this command :
 pnpm dlx codemod@latest nuxt/4/migration-recipe
 ```
 
-You need to remove the `app.vue` in order to use the one defined in the `ui` or `wiki layer`.
+You need to remove the `app.vue` in order to use the one defined in the `ui` or `wiki` layer.
 
 
 ```bash [Terminal]
@@ -53,6 +60,7 @@ rm app/app.vue
 
 ```bash [pnpm]
 pnpm add @nuxtjs/supabase
+pnpm add tailwindcss
 ```
 
 #### Add GaaS to the Nuxt project
@@ -89,17 +97,28 @@ export default defineNuxtConfig({
 Create a `main.css` file in the `app/assets/css` directory and add the following content:
 
 ```css [app/assets/css/main.css]
-@import 'tailwindcss' theme(static);
-@import '@nuxt/ui';
+@import 'tailwindcss';
+@import '@nuxt/ui-pro';
 
 @source "../../../node_modules/@gaas/ui";
 ```
+
+::warning
+Ask if could use `nuxt/ui` instead of `@nuxt/ui-pro` in the future.
+::
 
 
 #### Setup Supabase
 
 In order to use GaaS, you need to connect to a Supabase project. Either you can host your own Supabase project or [create one on their cloud](https://supabase.com) .
 
+##### Local Supabase
+
+install [Supabase CLI](https://supabase.com/docs/guides/cli):
+
+```bash [Terminal]
+pnpx supabase --help
+```
 
 #### Finish setup nuxt project
 
