--- a/docs/content/1.get-started/1.index.md
+++ b/docs/content/1.get-started/1.index.md
@@ -20,13 +20,11 @@ However, building such interfaces presents numerous practical challenges, includ
 
 ## GaaS
 
-GaaS (Galaxy as a Service) is a typescript toolkit designed speciﬁcally for web developers 
-who want to create custom web applications to interface analysis workflows.
+The [GaaS](https://github/rplanel/GaaS) monorepo consists of several interconnected packages 
+designed to provide a complete toolkit for building Galaxy-integrated web applications. 
+It is designed speciﬁcally for web developers who want to create custom web applications to interface analysis workflows.
 GaaS leverages the [Nuxt](https://nuxt.com/) and [Vue](https://vuejs.org/) ecosystem to streamline the development process, 
 allowing developers to focus on creating specialized visualization and data exploration interfaces. 
-
-
-
 
 
 ### Packages
@@ -40,7 +38,7 @@ GaaS is composed of several packages:
   title: Blendtype
   to: /packages/blendtype
   ---
-  Typescript client to interact with the Galaxy REST API.
+  TypeScript client for Galaxy REST API
   :::
 
   :::card
@@ -50,9 +48,7 @@ GaaS is composed of several packages:
   title: nuxt-galaxy
   to: /packages/nuxt-galaxy
   ---
-  Nuxt module that integrates with Galaxy Project. 
-  It provides authentication handling and data persistence 
-  with Supabase.
+  Nuxt module for Galaxy integration.
   :::
 
   :::card
@@ -93,9 +89,8 @@ GaaS is composed of several packages:
   title: GaaS CLI
   to: https://content.nuxt.com
   ---
-  Command line interface to build bibliography content and RAG (Retrieval-Augmented Generation) capabilities.
+  Command-line interface for GaaS operations
   :::
-
 ::
 
 ## Key Features
