--- a/docs/content/2.concepts/1.index.md
+++ b/docs/content/2.concepts/1.index.md
@@ -3,6 +3,15 @@ title: "Concepts"
 ---
 
 
+
+
+## Galaxy
+
+
+Using galaxy to run tools has multiple advantages:
+- Direct integration of Cluster computing (usually galaxy instances are using a cluster to run tools)
+- Galaxy provides a formal description of the tools and its command-line arguments.
+
 - GaaS uses two way to reuse code in the nuxt ecosystem:
   - Nuxt modules
   - Nuxt layers
