--- a/docs/content/3.packages/1.blendtype.md
+++ b/docs/content/3.packages/1.blendtype.md
@@ -21,7 +21,62 @@ Blendtype only supports a subset of Galaxy API endpoints, but it is extensible t
 
 ## Installation
 
+
+To install Blendtype, you can use your preferred package manager. Here are the commands for different package managers:
+
+```bash [pnpm]
+pnpm add blendtype
+```
+
+
+
 ## Usage
+
+::code-group
+
+```typescript [Promise]
+
+import { initializeGalaxyClient, createHistory, uploadFileToHistory } from 'blendtype'
+
+// Initialize the client
+initializeGalaxyClient({
+  apiKey: process.env.GALAXY_API_KEY,
+  url: 'https://your-galaxy-server.org'
+})
+
+// Create a history
+const history = await createHistory('My Analysis')
+
+// Upload a file
+const uploadResult = await uploadFileToHistory({
+  historyId: history.id,
+  srcUrl: 'https://example.com/data.txt',
+  name: 'input-data.txt'
+})
+```
+
+```typescript [Effect]
+
+import { Effect } from 'effect'
+import { createHistoryEffect, uploadFileToHistoryEffect } from 'blendtype'
+
+const program = Effect.gen(function* () {
+  // Create history
+  const history = yield* createHistoryEffect('My Analysis')
+  
+  // Upload file
+  const dataset = yield* uploadFileToHistoryEffect({
+    historyId: history.id,
+    blob: myBlob,
+    name: 'data.txt'
+  })
+  
+  return { history, dataset }
+})
+
+```
+
+::
 
 ### Configuration
 
@@ -69,3 +124,10 @@ Effect.gen(function* () {
 
 ```
 
+
+## Key Features
+
+- **Type-safe API**: Blendtype provides a strongly typed interface to the Galaxy REST API.
+- **Type-safe Error Handling**: Built on the Effect library, errors are tracked and handled at the type level, ensuring compile-time safety.
+- **Authentication handling** - Manages Galaxy API key authentication
+- **Extensible**: While it currently supports a subset of Galaxy API endpoints, the architecture is designed to be extensible to accommodate additional endpoints as needed.
