--- a/docs/content/3.packages/3.gaas-ui.md
+++ b/docs/content/3.packages/3.gaas-ui.md
@@ -19,13 +19,15 @@ links:
 ---
 
 
-GaaS UI is a Nuxt layer built on top of `nuxt-galaxy` that provides pre-built pages and layouts. It simplifies the process of creating a user interface for your Galaxy-based applications 
+GaaS UI is a Nuxt layer built on top of `nuxt-galaxy` that provides pre-built pages and layouts. 
+It simplifies the process of creating a user interface for your Galaxy-based applications 
 by offering ready-to-use components and layouts.
 
 It provides a set of pages, components, and layouts to build a user interface 
 that consume the `nuxt-galaxy` server API.
 
 
+- Take advantage of the galaxy tool description to generate forms.
 - It uses the Galaxy tool description (Galaxy tool xml file or wrapper) 
 to generate a form to invoke a workflow.
 
