--- a/docs/content/3.packages/5.gaas-llm.md
+++ b/docs/content/3.packages/5.gaas-llm.md
@@ -5,6 +5,14 @@ description: Learn how to use the GaaS LLM package.
 
 
 
-GaaS LLM is a package that provides a simple interface to interact with Large Language Models (LLMs).
-It allows you to easily integrate LLMs into your applications, enabling you to perform tasks such as text generation, summarization, translation, and more.
-It depends on [GaaS Wiki](/packages/gaas-wiki) to store the LLMs and their configurations.
+GaaS LLM is a chatbot that enables users to ask questions about GaaS Wiki content and bibliography references. 
+
+The package provides a conversational interface where users can query file content and research papers provided by the GaaS Wiki content. 
+Under the hood, it implements a Retrieval-Augmented Generation (RAG) system that combines the power of Large Language Models with targeted content retrieval 
+from the GaaS Wiki knowledge base and bibliography database.
+
+This approach ensures that responses are grounded in accurate, 
+up-to-date documentation while leveraging the natural language understanding capabilities 
+of modern LLMs to provide contextual and helpful answers.
+
+
