chore(deps): upgrade to nuxt ui v4

--- a/docs/content/1.get-started/2.installation.md
+++ b/docs/content/1.get-started/2.installation.md
@@ -98,14 +98,11 @@ Create a `main.css` file in the `app/assets/css` directory and add the following
 
 ```css [app/assets/css/main.css]
 @import 'tailwindcss';
-@import '@nuxt/ui-pro';
+@import '@nuxt/ui';
 
 @source "../../../node_modules/@gaas/ui";
 ```
 
-::warning
-Ask if could use `nuxt/ui` instead of `@nuxt/ui-pro` in the future.
-::
 
 
 #### Setup Supabase
