--- a/docs/content/1.getting-started/3.usage.md
+++ b/docs/content/1.getting-started/3.usage.md
@@ -21,7 +21,7 @@ You can just start writing `.md` or `.yml` files in the [`content/`](https://con
 
 ## App Configuration
 
-In addition to `@nuxt/ui-pro` configuration through the `app.config.ts`, this template lets you customize the `Header`, `Footer` and the `Table of contents` components.
+In addition to `@nuxt/ui` configuration through the `app.config.ts`, this template lets you customize the `Header`, `Footer` and the `Table of contents` components.
 
 ### Header
 
